Switch div to external and p to internal CSS

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -6,19 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+      p {
+    background-color: green;
+    font-size: 18px;
+    color: white;
+      }
+    </style>
   </head>
   <body>
-    <style>
-      div {
-        background-color: red;
-        color: white;
-        font-size: 32px;
-        text-align: center;
-        font-weight: bold;
-      }
-
-    </style>
-
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button style="background-color: orange; font-size: 18px;">Inline Method</button>
