Add uvw ID and change background color and font size

--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="abc">Number 1 - I'm a class!</p>
     <div id="xyz">Number 2 - I'm one ID.</div>
     <p class="abc def">Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
+    <div id="uvw">Number 4 - I'm another ID.</div>
     <p class="abc">Number 5 - I'm a class!</p>
   </body>
 </html>
